@@ -4,6 +4,13 @@ require "rss/maker"
 
 module RSS
   class TestMaker10 < TestCase
+    def test_supported?
+      assert(RSS::Maker.supported?("1.0"))
+      assert(RSS::Maker.supported?("rss1.0"))
+      assert(!RSS::Maker.supported?("1.1"))
+      assert(!RSS::Maker.supported?("rss1.1"))
+    end
+
     def test_find_class
       assert_equal(RSS::Maker::RSS10, RSS::Maker["1.0"])
       assert_equal(RSS::Maker::RSS10, RSS::Maker["rss1.0"])
